# jumia-intelligence-toolkit

./: .env.example  .gitignore  .pre-commit-config.yaml  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
data/playwright/: storage_state.json
examples/: browser.py  capture_jumia.py  logger.py
src/jit/adapters/: cookie_adapter.py  header_adapter.py  playwright_request_adapter.py  playwright_response_adapter.py
src/jit/browser/: __init__.py  browser.py  browser_options.py  browser_session.py  context.py  network_event.py  session.py
src/jit/capture/: __init__.py  capture_runner.py  capture_statistics.py  network_event.py  (+2 more)
tests/: test_logger.py  test_settings.py
tests/adapters/: test_cookie_adapter.py  test_header_adapter.py  test_playwright_request_adapter.py  test_playwright_response_adapter.py
tests/browser/: test_browser_session.py  test_context.py  test_context_capture.py  test_session.py
tests/capture/: __init__.py  capture_runner.py  test_capture_statistics.py  test_network_event.py  test_request_capture.py  test_response_capture.py
tests/discovery/: test_api_mapper.py  test_api_mapper_response_schema.py  test_api_mapper_schema.py  test_endpoint_detector.py  test_request_classifier.py  test_schema_detector.py  test_schema_manager.py  test_schema_merge.py  test_url_normalizer.py
tests/entities/: test_api_endpoint.py  test_api_endpoint_schema.py  test_header_collection.py  test_http_cookie.py  test_http_header.py  test_http_request.py  test_http_response.py  test_request_timing.py  test_schema.py  test_schema_field.py
tests/examples/: settings.py
tests/inference/: test_schema_inferer.py  test_schema_merger.py  test_type_inferer.py
tests/network/: test_capture.py  test_interceptor.py  test_recorder.py
tests/openapi/: test_openapi_document.py  test_openapi_generator.py  test_openapi_operation.py  test_openapi_path.py  test_openapi_schema.py
tests/playwright/: test_browser_lifecycle.py  test_event_handlers.py  test_event_registration.py  test_playwright_capture.py  test_playwright_session.py  test_request_mapper.py  test_response_mapper.py
tests/serializers/: test_api_endpoint_serializer.py  test_header_collection_serializer.py  test_http_cookie_serializer.py  test_http_header_serializer.py  test_http_request_serializer.py  test_http_response_serializer.py  test_request_timing_serializer.py  test_schema_field_serializer.py  test_schema_serializer.py
(+49 files in other folders)
